--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,30 +1,164 @@
+
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  background: #c5cae9;
+  font-family: 'Roboto', sans-serif;
+}
+.flex_container {
+  display: flex;
+  // max-width: 1200px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.search{
+  background: #3949ab;
+  align-items: center;
+  text-align: center;
+  align-self: center;
+  padding-bottom: 20px;
+  h1 {
+    padding: 20px;
+  }
+}
+.search_wrapper {
+  width: 50%;
+  background: #fff;
+  margin: 0 auto;
+  display: flex;
+  i {
+    font-size: 20px;
+    padding: 5px;
+    cursor: pointer;
+  }
+  input {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    border: none;
+    &:focus {
+      outline: none;
+    }
+  }
+  button {
+    background: transparent;
+    border: none;
+    &:focus {
+      outline: none;
+    }
+  }
+}
+.compare {
+  margin-right: 10%;
+  flex-basis: 70%;
+  flex-direction: row;
+  justify-content: center;
+}
+.result > ul > li{
+  background: #e8eaf6;
+  margin: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.result > ul > li:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.list, .second_list {
+  padding: 15px 0;
+}
+.element {
+  flex-basis: 50%;
+  min-height: 100px;
+  h2 {
+    text-align: center;
+    padding: 20px 0;
+  }
+}
+.result {
+  margin-left: 10%;
+  flex-basis: 20%;
+  overflow: hidden;
+  ul {
+    padding: 0;
+  }
+}
+.list .country ul .country_name{
+  color: black;
+}
+.compare{
+  display: flex;
+}
+.search {
+  flex-basis: 100%;
+}
 ul {
   list-style-type: none;
 }
 .country {
-  border: 1px solid red;
   margin-bottom: 15px;
   padding: 20px;
   ul li:nth-child(2) {
-    color: red;
-    font-size: 40px;
+    font-size: 30px;
   }
 }
 .flag {
   display: inline-block;
   margin-right: 25px;
-  width: 160px;
-  height: 100px;
-  border: 1px solid black;
+  width: 80px;
+  height: 50px;
   img {
-    width: 160px;
-    height: 100px;
+    width: 80px;
+    height: 50px;
   }
 }
 .country_name {
-  display: inline-block;
+  // display: inline-block;
 }
 .error {
   color: #D8000C;
   background-color: #FFD2D2;
+}
+.highlight {
+  background: #880e4f;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.draw {
+  height: auto;
+}
+.draw, .circle1, .circle2, .circle3, .circle4 {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin: auto;
+  animation-name: stretch;
+  animation-duration: 2.5s;
+  p {
+    position: absolute;
+    align-self: center;
+    margin: 0;
+  }
+}
+@keyframes stretch {
+  0% {
+    transform: scale(.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.helper {
+  overflow:hidden;
+}
+.helper::before {
+    content:'';
+    padding-top:100%; /* vertical value as  100% equals width */
+    float:left;
 }
